force-app/main/default/objects/Follicle_Measurement__c/Follicle_Measurement__c.object-meta.xml
<CustomObject>
    <label>Follicle Measurement</label>
    <nameField>
        <displayFormat>FM{00000}</displayFormat>
        <label>Follicle Measurement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follicle Measurements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>