force-app/main/default/objects/Follicle_Measurement__c/fields/D2__c.field-meta.xml
<CustomField>
    <fullName>D2__c</fullName>
    <label>D2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>