force-app/main/default/objects/Follicle_Measurement__c/fields/Side_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Side_as_Text__c</fullName>
    <formula>TEXT(Side__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Side as Text</label>
    <type>Text</type>
</CustomField>