force-app/main/default/objects/Follicle_Measurement__c/fields/Volume_mL__c.field-meta.xml
<CustomField>
    <fullName>Volume_mL__c</fullName>
    <label>Volume (mL)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>